# EduPortal_Control

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: create-updater-manifest.mjs
src/: App.tsx  api.ts  styles.css  types.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/caddy/: caddy_windows_amd64.json
src-tauri/src/: commands.rs  domain.rs  lib.rs  main.rs  runtime.rs  storage.rs  telegram.rs
src-tauri/src/services/: caddy.rs  migration.rs  mod.rs  pm2.rs  portal_release.rs  software.rs
src/application/: useAppController.ts
src/domain/: pm2.ts
src/domain/deploy/: deploy-steps.ts  types.ts
src/domain/settings/: defaults.ts
src/presentation/: navigation.ts
src/presentation/components/: EnvEditor.tsx  EnvPreview.tsx  Feedback.tsx  NavButton.tsx  Pm2ProcessCard.tsx
src/presentation/layout/: Sidebar.tsx  Topbar.tsx
src/presentation/tabs/: CaddyTab.tsx  DatabaseTab.tsx  DeploymentsTab.tsx  LogsTab.tsx  OverviewTab.tsx  PlaceholderTab.tsx  SettingsTab.tsx  SoftwareTab.tsx  types.ts
src/shared/: errors.ts  formatters.ts
